--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,9 @@
     <div class="text-center ">
         <img src="/images/zeonlab_logo.png" class="zlogo">
         <a href="/login" class="btn btn-default" style="margin-right:12px;"><span class="fa fa-lock icon"></span>Login<span class="fa fa-chevron-right rightarrow"></span></a>
+        <a href="/customerlogin" class="btn btn-default" style="margin-right:12px;"><span class="fa fa-lock icon"></span>Customer Login<span class="fa fa-chevron-right rightarrow"></span></a>
         <a href="/signup" class="btn btn-default"><span class="fa fa-user icon"></span>Signup<span class="fa fa-chevron-right rightarrow"></span></a>
+
     </div>
 
 </div>
