--- a/views/tradepage2.ejs
+++ b/views/tradepage2.ejs
@@ -79,7 +79,7 @@
                                     <% if(senderpage == 'Buyer') {%><button class="tradebtn uploadbtn" data-toggle="modal" data-target="#uploadmodal" onclick="fillName('kyc'); setTitle('KYC')">Upload KYC
                                         <i class="fa fa-upload" aria-hidden="true"></i>
                                     </button><br/><%}%>
-                                    <% if(senderpage == 'Buyer') {%> <div class="optionbtn">
+                                    <% if(senderpage == 'Seller') {%> <div class="optionbtn">
                                         <button class="tradebtn acceptbtn" onclick="fillForm('I')" form="approval_form">Accept
                                             <i class="fa fa-check" aria-hidden="true"></i>
                                         </button>
@@ -87,14 +87,7 @@
                                             <i class="fa fa-times" aria-hidden="true"></i>
                                         </button>
                                     </div><%}%>
-                                    <% if(senderpage == 'Bank') {%> <div class="optionbtn">
-                                        <button class="tradebtn acceptbtn" onclick="fillForm('IA')" form="approval_form">Accept
-                                            <i class="fa fa-check" aria-hidden="true"></i>
-                                        </button>
-                                        <button class="tradebtn rejectbtn" onclick="fillForm('IA')" data-toggle="modal" data-target="#rejectmodal">Reject
-                                            <i class="fa fa-times" aria-hidden="true"></i>
-                                        </button>
-                                    </div><%}%>
+
                                     <div class="downloadbtn">
                                         <button class="tradebtn dnldbcbtn" onclick="dwnldForm('Invoice')" data-toggle="modal" data-target="#bcdnldmodal" form="dwnld_form2">Download
                                             <i class="fa fa-link" aria-hidden="true"></i>
@@ -475,7 +468,7 @@
 						<p style="font-weight:bold;">You can close this window now</p>
 					</div>
 					<div id="uplhide">
-						<form id="uploadform" action = "/uploadDoc" method = "POST" enctype = "multipart/form-data">
+						<form id="uploadInvoiceForm" action = "/uploadDoc" method = "POST" enctype = "multipart/form-data">
 							<div class="form-group">
 								<input type="hidden" id="docName" name="senderpage">
                 <input type="hidden" name="userAddress" value=<%= userAddress %>>
@@ -487,7 +480,7 @@
 							</div>
 						</form>
 						<div class="form-group">
-							<button class="btn mupbtn" onclick = "computeHash()"><img src="/images/Upload.png" class="upimg">Upload</button>
+							<button class="btn mupbtn" onclick = "computeHash('uploadInvoiceForm')"><img src="/images/Upload.png" class="upimg">Upload</button>
 						</div>
 					</div>
 				</div>
@@ -651,11 +644,15 @@ $("#docfile").click(function(){
     document.getElementById("uperror").style.display="none";
 
 });
-function computeHash(){
+function computeHash(formID){
+  if (!formID) {
+    formID = "uploadform";
+  }
 
-    $('#uploadform').submit();
-    $('#uplhide').hide();
-    $('#uplshow').show();
+  var form = document.getElementById(formID);
+  form.submit();
+  $('#uplhide').hide();
+  $('#uplshow').show();
 }
 
 $(document).ready(function(){rejection_form
