--- a/views/tradepage2.ejs
+++ b/views/tradepage2.ejs
@@ -846,6 +846,16 @@ switch("<%= status %>"){
   }
   else $(".kyc_row .tradetxt").html('<%= buyer_id %>  to Upload KYC');
   break;
+  case "Quotation Uploaded":
+	$(".kyc_row .dnldsvbtn, .kyc_row_row .dnldbcbtn").css("cssText","opacity:1 !important");
+	$(".kyc_row_row .dnldsvbtn, .kyc_row_row .dnldbcbtn").prop('disabled', false);
+	if("<%= senderpage %>" == "Buyer"){
+		$(".pendingstatus, .kyc_row_row .tradetxt").html('Review KYC');
+		$(".kyc_row_row .acceptbtn, .kyc_row_row .rejectbtn").css("cssText","opacity:1 !important");
+		$(".kyc_row_row .acceptbtn, .kyc_row_row .rejectbtn").prop('disabled', false);
+	}
+	else $(".pendingstatus, .quotation_row .tradetxt").html('<%= buyer_id %>  to Approve');
+	break;
   case "KYC Approved":
   case "RFQ Not Uploaded":
   if("<%= senderpage %>" == "Buyer"){
