--- a/views/tradepage2.ejs
+++ b/views/tradepage2.ejs
@@ -80,19 +80,19 @@
                                         <i class="fa fa-upload" aria-hidden="true"></i>
                                     </button><br/><%}%>
                                     <% if(senderpage == 'Seller') {%> <div class="optionbtn">
-                                        <button class="tradebtn acceptbtn" onclick="fillForm('I')" form="approval_form">Accept
+                                        <button class="tradebtn acceptbtn" onclick="fillForm('K')" form="approval_form">Accept
                                             <i class="fa fa-check" aria-hidden="true"></i>
                                         </button>
-                                        <button class="tradebtn rejectbtn" onclick="fillForm('I')" data-toggle="modal" data-target="#rejectmodal">Reject
+                                        <button class="tradebtn rejectbtn" onclick="fillForm('K')" data-toggle="modal" data-target="#rejectmodal">Reject
                                             <i class="fa fa-times" aria-hidden="true"></i>
                                         </button>
                                     </div><%}%>
 
                                     <div class="downloadbtn">
-                                        <button class="tradebtn dnldbcbtn" onclick="dwnldForm('Invoice')" data-toggle="modal" data-target="#bcdnldmodal" form="dwnld_form2">Download
+                                        <button class="tradebtn dnldbcbtn" onclick="dwnldForm('KYC')" data-toggle="modal" data-target="#bcdnldmodal" form="dwnld_form2">Download
                                             <i class="fa fa-link" aria-hidden="true"></i>
                                         </button>
-                                        <button class="tradebtn dnldsvbtn" onclick="dwnldForm('Invoice')" form="dwnld_form">Download
+                                        <button class="tradebtn dnldsvbtn" onclick="dwnldForm('KYC')" form="dwnld_form">Download
                                             <i class="fa fa-server" aria-hidden="true"></i>
                                         </button>
                                     </div>
