--- a/views/tradepage2.ejs
+++ b/views/tradepage2.ejs
@@ -107,26 +107,26 @@
                             <div class="col-sm-10 traderight">
                                 <div class="col-sm-6">
                                     <p class="tradedate"></p>
-                                    <p class="tradehead">RFP</p>
+                                    <p class="tradehead">RFQ</p>
                                     <p class="tradetxt">Received Quotation from Seller</p>
                                 </div>
                                 <div class="col-sm-6 tradeoptions">
-                                    <% if(senderpage == 'Buyer') {%> <button class="tradebtn uploadbtn" data-toggle="modal" data-target="#uploadmodal" onclick="fillName('quotation'); setTitle('Request for Quotation')">Upload Quotation
+                                    <% if(senderpage == 'Buyer') {%> <button class="tradebtn uploadbtn" data-toggle="modal" data-target="#uploadmodal" onclick="fillName('rfq'); setTitle('Request for Quotation')">Upload Quotation
                                         <i class="fa fa-upload" aria-hidden="true"></i>
                                     </button><br/><%}%>
                                     <% if(senderpage == 'Seller') {%><div class="optionbtn">
-                                        <button class="tradebtn acceptbtn" onclick="fillForm('Q')" form="approval_form">Accept
+                                        <button class="tradebtn acceptbtn" onclick="fillForm('R')" form="approval_form">Accept
                                             <i class="fa fa-check" aria-hidden="true"></i>
                                         </button>
-                                        <button class="tradebtn rejectbtn" onclick="fillForm('Q')" data-toggle="modal" data-target="#rejectmodal">Reject
+                                        <button class="tradebtn rejectbtn" onclick="fillForm('R')" data-toggle="modal" data-target="#rejectmodal">Reject
                                             <i class="fa fa-times" aria-hidden="true"></i>
                                         </button>
                                     </div><%}%>
                                     <div class="downloadbtn">
-                                        <button class="tradebtn dnldbcbtn" onclick="dwnldForm('Quotation')" data-toggle="modal" data-target="#bcdnldmodal" form="dwnld_form2">Download
+                                        <button class="tradebtn dnldbcbtn" onclick="dwnldForm('RequestForQuotation')" data-toggle="modal" data-target="#bcdnldmodal" form="dwnld_form2">Download
                                             <i class="fa fa-link" aria-hidden="true"></i>
                                         </button>
-                                        <button class="tradebtn dnldsvbtn" onclick="dwnldForm('Quotation')" form="dwnld_form">Download
+                                        <button class="tradebtn dnldsvbtn" onclick="dwnldForm('RequestForQuotation')" form="dwnld_form">Download
                                             <i class="fa fa-server" aria-hidden="true"></i>
                                         </button>
                                     </div>
@@ -857,7 +857,7 @@ switch("<%= status %>"){
 		$(".kyc_row .uploadbtn").prop('disabled', false);
 		$(".pendingstatus, .kyc_row .tradetxt").html('KYC Rejected. Re-upload KYC');
 	}
-	else $(".quotation_row .tradetxt").html('KYC Rejected. <%= buyer_id %>  to Upload KYC');
+	else $(".kyc_row .tradetxt").html('KYC Rejected. <%= buyer_id %>  to Upload KYC');
 	break;
 	case "KYC Uploaded; Ethereum Txn Pending;":
 	$(".kyc_row .dnldsvbtn").css("cssText","opacity:1 !important");
