--- a/views/tradepage2.ejs
+++ b/views/tradepage2.ejs
@@ -706,7 +706,7 @@ switch("<%= status %>".split(' ')[0]){
     $(".kyc_row .status").html("IN PROGRESS");
 	}
 	break;
-	case "RFQ":
+	case "Request":
 	$(".kyc_row .tradetxt").html('KYC Approved');
 	$(".kyc_row .dnldsvbtn, .kyc_row .dnldbcbtn").css("cssText","opacity:1 !important");
 	$(".kyc_row .dnldsvbtn, .kyc_row .dnldbcbtn").prop('disabled', false);
