--- a/views/profile3.ejs
+++ b/views/profile3.ejs
@@ -380,13 +380,15 @@
 				<form id="trigger">
 					<input type="hidden" id="dealer_id" name="dealer_id" value=<%= username %>></input>
 					<input type="hidden" id="user" name="user" value=<%= user %>></input>
-					<input type="hidden" name="tradetype" value="DEALERTOCUSTOMER"></input>
-					<input type="hidden" id="senderpage" name="senderpage" value="Bank"></input>
+					<input type="hidden" id="tradetype" name="tradetype" value="DEALERTOCUSTOMER"></input>
+					<input type="hidden" id="senderpage" name="senderpage" value=<%= role %>></input>
 					<span class="show_error">Please Enter your Correct Aadhar Number </span>
 					<input type="text" class="form-control" id="aadhar_id" name="aadhar"  placeholder="Enter Aadhar no."required></input>
 					<span class="fa fa-id-card icon"></span><br>
 					<span class="mobile_error">Please Enter your Correct Mobile Number </span>
 					<input type="text" class="form-control" id="number_id" name="mobile" placeholder="Enter Phone no." required></input>
+					<input type="hidden" class="form-control" id="customer_id" value></input>
+					<input type="hidden" class="form-control" id="customerEthAddress" value></input>
 					<span class="fa fa-phone icon"></span><br>
 					<input type="text" class="form-control" id="insurer_id" name="insurer_id"  placeholder="Insurer Name"required></input>
 					<input type="hidden" name="kycExists" id="kycExists"></input>
@@ -466,6 +468,8 @@ $(document).ready(function(){
 									$("#kycVerified").addClass("fa-square-o");
 								}
 								document.getElementById('kycExists').value = response.kycExists;
+								document.getElementById('customer_id').value = response.customer_id;
+								document.getElementById('customerEthAddress').value = response.customerEthAddress;
 						 }
 					 }
 				 });
@@ -482,14 +486,18 @@ $(document).ready(function(){
 
 	function tradefun() {
 		var xhttp = new XMLHttpRequest();
-		var kycExists = encodeURIComponent(document.getElementById("kycExists").value);
-		var tradetype = encodeURIComponent(document.getElementById("tradetype").value);
-		var user = encodeURIComponent(document.getElementById("user").value);
-		var senderpage = encodeURIComponent(document.getElementById("senderpage").value);
-		var customer_id = encodeURIComponent(document.getElementById("customer_id").value);
 		var dealer_id = encodeURIComponent(document.getElementById("dealer_id").value);
-		var aadhar_id = encodeURIComponent(document.getElementById("aadhar_id").value);
-		var parameters = "user=" + user + "&senderpage=" + senderpage + "&tradetype=" + tradetype + "&customer_id=" + customer_id + "&dealer_id=" + dealer_id;
+		var user = encodeURIComponent(document.getElementById("user").value);
+		var tradetype = encodeURIComponent(document.getElementById("tradetype").value);
+		var senderpage = encodeURIComponent(document.getElementById("senderpage").value);
+		var aadhar = encodeURIComponent(document.getElementById("aadhar_id").value);
+		var mobile = encodeURIComponent(document.getElementById("number_id").value);
+		var insurer_id = encodeURIComponent(document.getElementById("insurer_id").value);
+		var customer_id = encodeURIComponent(document.getElementById("customer_id").value);
+		var kycExists = encodeURIComponent(document.getElementById("kycExists").value);
+		var customerEthAddress = encodeURIComponent(document.getElementById("customerEthAddress").value);
+		var parameters;
+		var parameters = "dealer_id=" + dealer_id + "&user=" + user + "&tradetype=" + tradetype + "&customerEthAddress=" + customerEthAddress + "&senderpage=" + senderpage + "&aadhar=" + aadhar + "&mobile=" + mobile + "&insurer_id=" + insurer_id + "&kycExists" + kycExists;
 
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
@@ -503,10 +511,11 @@ $(document).ready(function(){
 					var timestamp = res.tradeID.toString().substring(0,8);
 					timestamp = new Date( parseInt( timestamp, 16 ) * 1000 ).toString();
 					var indx = timestamp.indexOf('GMT');
+					console.log(res);
 					if(res.status == "Ethereum Transaction Pending!!! Check after 2 mins!!!"){
 						thead.innerHTML = '<tr><th>Tracking ID</th><th>Buyer</th><th>Seller</th><th>Date & Time</th><th>Trade Tracker</th></tr>';
-						tbody.innerHTML = '<tr><td style="display:none;">' + res.tradeID + '</td><td class="trackId">' + res.tradeID.slice(0,3) + '...' +  res.tradeID.slice(20,24) + "</td><td>" + res.buyer + "</td><td>" + res.seller + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+res.tradeID+' class="viewbtn" style="display: none;" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg" style="display: none;">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr><hr style="margin:0px;width:350%"></tr>' + tbody.innerHTML;
-						tradefun2(res.tradeID, kycexists, res.tradetype, res.buyerHash, res.sellerHash, res.buyerBankHash, res.sellerBankHash, res.shipperHash);
+						tbody.innerHTML = '<tr><td style="display:none;">' + res.tradeID + '</td><td class="trackId">' + res.tradeID.slice(0,3) + '...' +  res.tradeID.slice(20,24) + "</td><td>" + res.customer_id + "</td><td>" + res.dealer_id + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+res.tradeID+' class="viewbtn" style="display: none;" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg" style="display: none;">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr><hr style="margin:0px;width:350%"></tr>' + tbody.innerHTML;
+						tradefun2(res.tradeID, res.tradetype, res.dealerHash, res.insurerHash, res.customerHash);
 					}
 				}
 			}
@@ -516,9 +525,10 @@ $(document).ready(function(){
 		xhttp.send(parameters);
 	}
 
-	function tradefun2(tradeID, kycexists, tradetype, buyerHash, sellerHash, buyerBankHash, sellerBankHash, shipperHash){
+	function tradefun2(tradeID, tradetype, dealerHash, insurerHash, customerHash){
 		var xhttp = new XMLHttpRequest();
-		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&tradetype=" + encodeURIComponent(tradetype) + "&kycexists=" + encodeURIComponent(kycexists) + "&buyerHash=" + encodeURIComponent(buyerHash) + "&sellerHash=" + encodeURIComponent(sellerHash) + "&buyerBankHash=" + encodeURIComponent(buyerBankHash) + "&sellerBankHash=" + encodeURIComponent(sellerBankHash) + "&shipperHash=" + encodeURIComponent(shipperHash);
+		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&tradetype=" + encodeURIComponent(tradetype) + "&dealerHash=" + encodeURIComponent(dealerHash) + "&insurerHash=" + encodeURIComponent(insurerHash) + "&customerHash=" + encodeURIComponent(customerHash);
+		console.log("In");
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
 				location.reload();
