--- a/views/tradepage2.ejs
+++ b/views/tradepage2.ejs
@@ -111,7 +111,7 @@
                                     <p class="tradetxt">Received Quotation from Seller</p>
                                 </div>
                                 <div class="col-sm-6 tradeoptions">
-                                    <% if(senderpage == 'Buyer') {%> <button class="tradebtn uploadbtn" data-toggle="modal" data-target="#uploadmodal" onclick="fillName('rfq'); setTitle('Request for Quotation')">Upload Quotation
+                                    <% if(senderpage == 'Buyer') {%> <button class="tradebtn uploadbtn" data-toggle="modal" data-target="#uploadmodal" onclick="fillName('rfq'); setTitle('Request for Quotation')">Upload Request For Quotation
                                         <i class="fa fa-upload" aria-hidden="true"></i>
                                     </button><br/><%}%>
                                     <% if(senderpage == 'Seller') {%><div class="optionbtn">
