--- a/views/tradepage2.ejs
+++ b/views/tradepage2.ejs
@@ -694,7 +694,6 @@ if("<%= status %>".split(';')[1] ==  ' Ethereum Txn Pending' || "<%= status %>".
 }
 console.log("<%= status %>");
 console.log("<%= senderpage %>");
-
 switch("<%= status %>".split(' ')[0]){
 	case "KYC":
 	if("<%= status %>" != "KYC Approved"){
@@ -710,7 +709,7 @@ switch("<%= status %>".split(' ')[0]){
 	$(".kyc_row .tradetxt").html('KYC Approved');
 	$(".kyc_row .dnldsvbtn, .kyc_row .dnldbcbtn").css("cssText","opacity:1 !important");
 	$(".kyc_row .dnldsvbtn, .kyc_row .dnldbcbtn").prop('disabled', false);
-	if("<%= status %>" != "RFQ Approved"){
+	if("<%= status %>" != "Request For Quotation Approved"){
     $(".request_row").addClass("trading");
     $(".request_row").css("cssText","border: 1px solid rgba(13, 92, 198, 1);");
     $(".request_row .tradeleft").css("cssText","opacity:1 !important");
@@ -719,6 +718,9 @@ switch("<%= status %>".split(' ')[0]){
     $(".request_row .status").html("IN PROGRESS");
     $(".kyc_row .status").html("COMPLETED");
 	}
+  else{
+    $(".quotation_row").addClass("trading");
+  }
 	break;
 	case "Quotation":
 	$(".kyc_row .tradetxt").html('KYC Approved');
@@ -735,6 +737,9 @@ switch("<%= status %>".split(' ')[0]){
     $(".quotation_row .tradebtn").css("cssText","opacity:1; border: 2px solid white;");
     $(".quotation_row .status").html("IN PROGRESS");
     $(".kyc_row .status, .request_row .status").html("COMPLETED");
+  }
+  else{
+    $(".purchase_row").addClass("trading");
   }
 	break;
 	case "Purchase":
@@ -755,6 +760,9 @@ switch("<%= status %>".split(' ')[0]){
     $(".purchase_row .tradebtn").css("cssText","opacity:1; border: 2px solid white;");
     $(".purchase_row .status").html("IN PROGRESS");
     $(".kyc_row .status, .request_row .status, .quotation_row .status").html("COMPLETED");
+  }
+  else{
+    $(".invoice_row").addClass("trading");
   }
 	break;
 	case "Invoice":
@@ -778,38 +786,9 @@ switch("<%= status %>".split(' ')[0]){
     $(".invoice_row .tradebtn").css("cssText","opacity:1; border: 2px solid white;");
     $(".invoice_row .status").html("IN PROGRESS");
     $(".kyc_row .status, .request_row .status, .quotation_row .status, .purchase_row .status").html("COMPLETED");
-
   }
-	break;
-	case "Bill":
-	$(".kyc_row .tradetxt").html('KYC Approved');
-	$(".request_row .tradetxt").html('RFQ Approved');
-	$(".quotation_row .tradetxt").html('Quotation Approved');
-	$(".purchase_row .tradetxt").html('Purchase Order Approved');
-	$(".invoice_row .tradetxt").html('Invoice Approved');
-	$('.payment_row .tradeleft').css("cssText","opacity:1 !important");
-	$(".payment_row .tradetxt").html('Payment Scheduled');
-	$(".agreement_row .tradetxt").html('Financial Agreement Approved');
-	$(".kyc_row .dnldsvbtn, .kyc_row .dnldbcbtn").css("cssText","opacity:1 !important");
-	$(".kyc_row .dnldsvbtn, .kyc_row .dnldbcbtn").prop('disabled', false);
-	$(".request_row .dnldsvbtn, .request_row .dnldbcbtn").css("cssText","opacity:1 !important");
-	$(".request_row .dnldsvbtn, .request_row .dnldbcbtn").prop('disabled', false);
-	$(".quotation_row .dnldsvbtn, .quotation_row .dnldbcbtn").css("cssText","opacity:1 !important");
-	$(".quotation_row .dnldsvbtn, .quotation_row .dnldbcbtn").prop('disabled', false);
-	$(".purchase_row .dnldsvbtn, .purchase_row .dnldbcbtn").css("cssText","opacity:1 !important");
-	$(".purchase_row .dnldsvbtn, .purchase_row .dnldbcbtn").prop('disabled', false);
-	$(".invoice_row .dnldsvbtn, .invoice_row .dnldbcbtn").css("cssText","opacity:1 !important");
-	$(".invoice_row .dnldsvbtn, .invoice_row .dnldbcbtn").prop('disabled', false);
-	$(".agreement_row .viewbtn2, .agreement_row .viewbtn1").css("cssText","opacity:1 !important");
-	$(".agreement_row .viewbtn2, .agreement_row .viewbtn1").prop('disabled', false);
-	if("<%= status %>" != "Bill Of Lading Approved"){
-    $(".bill_row").addClass("trading");
-    $(".bill_row").css("cssText","border: 1px solid rgba(13, 92, 198, 1);");
-    $(".bill_row .tradeleft").css("cssText","opacity:1 !important");
-    $(".bill_row .traderight").css("cssText","background-image: url(/images/tradeopbg.jpg);");
-    $(".bill_row .tradebtn").css("cssText","opacity:1; border: 2px solid white;");
-    $(".bill_row .status").html("IN PROGRESS");
-    $(".kyc_row .status, .request_row .status, .quotation_row .status, .purchase_row .status, .invoice_row .status, .agreement_row .status").html("COMPLETED");
+  else{
+    $(".payment_row").addClass("trading");
   }
 	break;
 	case "Payment":
